--- a/index.Rmd
+++ b/index.Rmd
@@ -716,7 +716,7 @@ __Developments__
 
 __Challenges__  
     
-* Data  
+* Data availability  
   
   
 * Exploring AI techniques applied to trend detection  
